Local Build & Deploy Test

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<div class="message">
 				<h1>It's running!</h1>
                 <h1>Test Kanta Umezawa</h1>
+                <h1>Local Build & Deploy Test</h1>
 				<h2>Congratulations, you successfully deployed a container image to Cloud Run</h2>
 			</div>
 		</div>
